--- a/src/components/SuccessForm/SuccessForm.css
+++ b/src/components/SuccessForm/SuccessForm.css
@@ -48,22 +48,22 @@
 .check-in-container{
     margin-left: 30px;
 }
-.left-container{
+.left-success-container{
     display: flex;
     flex-direction: column;
     gap: 0;
     border-right: 1px solid;
     width: 30%;
 }
-.left-container p{
+.left-success-container p{
     margin-top: 0px;
     font-size: 15px;
     font-family: roboto;
 }
-.left-container h3{
+.left-success-container h3{
     margin-bottom: 0px;
 }
-.right-container{
+.right-success-container{
     display: flex;
     align-items: center;
     gap: 20px;
